text align fix on carosel

--- a/src/components/Slider/style.css
+++ b/src/components/Slider/style.css
@@ -6,8 +6,7 @@
 }
 
 .swiper-slide {
-    text-align: center;
-    font-size: 18px;
+    
 
     height: calc((100% - 30px) / 2);
 
